# oop-exercises

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  README.md  _config.yml  appveyor.yml  check.cpp  checker.hpp  compiler.hpp  configure.ac  create-exercise.cpp  create-question.cpp  exercise.hpp  main.cpp  mingw-to-path.bat  question-generator.cpp  testcpp17.cpp  verifier.cpp
.snapcraft/: travis_snapcraft.cfg
answers/: solution-2.cpp
exercises/: create-question.cpp
exercises/exercise-1/: README.md  solution.cpp
exercises/question-1/: solution.cpp
exercises/question-2/: README.md  solution.cpp  tester.cpp
question-1/: README.md  tester.cpp
snap/: snapcraft.yaml
